--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>    
+     <link rel="stylesheet" href="./css/styles.css" />
+      
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
+    <form class="search-form">
+      <div class="">
+        <input type="text" class="search-input" name="searchKeyword" placeholder="Search images" />
+      </div>
+      <button type="submit" class="search-btn">Search</button>
+    </form>
+    <ul class="gallery"></ul>
+    <button type="button" class="photo-btn is-hidden-btn">Load more</button>
+   <span class="loader position is-hidden"></span>
+    <script  type="module" src="./main.js" ></script>
   </body>
+  
 </html>
